# mux-media

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  mux-media.json
.github/workflows/: release.yml  rust-ci.yml  rust.yml  static.yml  tests.yml
benches/: extensions.rs
mux-media/: Cargo.toml  build.rs
mux-media-macros/: Cargo.toml
mux-media-macros/src/: is_default.rs  lib.rs
mux-media/scripts/: gen_extensions.py
mux-media/src/: functions.rs  i18n.rs  lib.rs  macros.rs  markers.rs  traits.rs  types.rs
mux-media/src/i18n/: as_eng.rs  as_rus.rs  logs.rs  pubs.rs
mux-media/src/macros/: deref.rs  from_arg_matches.rs  mkvmerge_args.rs  parseable_args.rs  to_ffmpeg_args.rs  to_json_args.rs  to_mkvmerge_args.rs  unmut.rs
mux-media/src/traits/: is_default.rs  lazy_fields.rs
mux-media/src/types/: arc_path_buf.rs  attachs.rs  auto_flags.rs  chapters.rs  char_encoding.rs  extensions.rs  file_type.rs  input.rs  lang_code.rs  media_info.rs  mux.rs  muxer.rs  output.rs  range.rs  retiming.rs  specials.rs  target.rs  tools.rs  tracks.rs  value.rs  verbosity.rs
mux-media/src/types/attachs/: to_args.rs  to_json_args.rs  to_mkvmerge_args.rs
mux-media/src/types/extensions/: avi.rs  fonts.rs  matroska.rs  mp4.rs  subs.rs
mux-media/src/types/input/: from_arg_matches.rs  iters.rs  to_args.rs  to_json_args.rs
mux-media/src/types/lang_code/: impls.rs
mux-media/src/types/media_info/: builders.rs  cache.rs  getters.rs  mut_fields.rs
mux-media/src/types/media_info/builders/: name_tail_rel_fall.rs  saved.rs
mux-media/src/types/media_info/cache/: attach.rs  track.rs
mux-media/src/types/mux/: config.rs  error.rs  logger.rs
mux-media/src/types/mux/config/: command_factory.rs  fields.rs  from_arg_matches.rs  parseable_args.rs  raw.rs  to_json_args.rs  try_init.rs
mux-media/src/types/mux/config/command_factory/: auto.rs  global.rs  io.rs  other.rs  retiming.rs  target.rs
mux-media/src/types/muxer/: avi.rs  codecs.rs  matroska.rs
mux-media/src/types/output/: default.rs  to_args.rs  to_json_args.rs  try_finalize_init.rs  try_from.rs
mux-media/src/types/range/: iter.rs
mux-media/src/types/specials/: to_json_args.rs  to_mkvmerge_args.rs
mux-media/src/types/tools/: paths.rs  tool.rs
mux-media/src/types/tracks/: flags.rs  from_arg_matches.rs  id.rs  impls.rs  langs.rs  names.rs  order.rs  to_json_args.rs  to_mkvmerge_args.rs  track_type.rs
mux-media/src/types/tracks/flags/: counts.rs  flag_type.rs  from_str.rs  to_args.rs  to_mkvmerge_args.rs
mux-media/src/types/tracks/langs/: from.rs  to_args.rs
mux-media/src/types/tracks/names/: from.rs  to_args.rs
mux-media/src/types/tracks/order/: to_args.rs
mux-media/tests/: common.rs  functions.rs  macros.rs  types.rs
mux-media/tests/test_data/: audio_x1.mka  font_x8_other_x8.mks  other_x8_font_x8.mks
mux-media/tests/test_data/lang/: en_lang.mks
mux-media/tests/types/: attachs.rs  auto_flags.rs  chapters.rs  char_encoding.rs  input.rs  media_info.rs  mux.rs  muxer.rs  output.rs  retiming.rs  specials.rs  targets.rs  tools.rs  tracks.rs  verbosity.rs
mux-media/tests/types/mux/: config.rs  config_raw.rs  error.rs
mux-media/tests/types/tracks/: flags.rs  langs.rs  names.rs  order.rs  track_type.rs
resources/: iso639_language_list.cpp
scripts/: gen_extensions.py  gen_lang_code_enum.py  gen_raw_enum.py  gen_special_opt_enum.py
src/: functions.rs  i18n.rs  lib.rs  macros.rs  main.rs  markers.rs  run.rs  traits.rs  types.rs
src/i18n/: as_eng.rs  as_rus.rs  eng.rs  logs.rs  pubs.rs  rus.rs
src/macros/: cli_args.rs  deref.rs  from_arg_matches.rs  get_fields.rs  immut.rs  mkvmerge_args.rs  msg.rs  to_ffmpeg_args.rs  to_json_args.rs  to_mkvmerge_args.rs
src/run/: buf_packets.rs  current.rs  encoder.rs  header.rs  init_external_fonts.rs  packet.rs
src/traits/: lazy_fields.rs
src/types/: arc_path_buf.rs  attachs.rs  auto_flags.rs  chapters.rs  char_encoding.rs  cli_arg.rs  codec_id.rs  config.rs  container.rs  dispositions.rs  duration.rs  extension.rs  extensions.rs  ffmpeg_stream.rs  file_type.rs  globset_pattern.rs  helpers.rs  input.rs  lang.rs  lang_code.rs  log_level.rs  media_info.rs  media_number.rs  metadata.rs  mux.rs  mux_config.rs  mux_current.rs  mux_error.rs  mux_logger.rs  muxer.rs  off_on_pro.rs  os_helpers.rs  output.rs  pro_flags.rs  range.rs  raws.rs  retiming.rs  specials.rs  stream.rs  streams.rs  (+10 more)
tests/: common.rs  functions.rs  i18n.rs  macros.rs  run.rs  types.rs
tests/test_data/: audio_x8.mka  cp1251.srt  font_attachs_x16.mks  other_attachs_x16.mks  sub_x1_font_x1.mks  sub_x8.mks  vid_0.96s_and_aud_0.99s.mkv  vid_1s_and_srt_5s.mkv  vid_x1_attach_x1.mkv  video_x8.mkv
tests/types/: attachs.rs  auto_flags.rs  chapters.rs  char_encoding.rs  cli_arg.rs  config.rs  container.rs  dispositions.rs  extension.rs  extensions.rs  input.rs  lang_code.rs  log_level.rs  media_info.rs  media_number.rs  metadata.rs  mux.rs  mux_config.rs  mux_error.rs  muxer.rs  off_on_pro.rs  output.rs  pro_flags.rs  range.rs  raws.rs  retiming.rs  specials.rs  streams.rs  streams_order.rs  targets.rs  tools.rs  track_flags.rs  track_langs.rs  (+4 more)
third-party-licenses/: README.md
(+220 files in other folders)
