[package]
name = "mux-media"
version = "0.16.0-dev"
authors = ["Ivan Reutov <nujievik@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A simple automated utility for muxing media (e.g. video, audio, subtitles)."
repository = "https://github.com/nujievik/mux-media"
license = "GPL-3.0"
keywords = ["cli", "utility"]
categories = ["command-line-utilities", "multimedia"]

include = [
    "Cargo.toml",
    "README.md",
    "assets/.gitkeep",
    "build.rs",
    "src/**",
]

[features]
default = []
static = ["ffmpeg-next/build"]

[dependencies]
atty = "0.2"
chardet = "0.2"
clap = "4"
enum-map = "2"
ffmpeg-next = "8"
globset = "0.4"
is_default = "0.1.4"
lazy-regex = "3"
log = "0.4"
matroska = "0.30"
phf = { version = "0.13", features = ["macros"] }
rayon = "1"
rsubs-lib = { git = "https://github.com/nujievik/rsubs-lib", branch = "mux-media" }
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
supports-color = "3"
time = "0.3"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
strum_macros = "0.27"
tar = "0.4"
walkdir = "2"
xz2 = "0.1"
zip = "6"

[dev-dependencies]
rand = "0.9"
