[package]
name = "mux-media"
version = "0.16.2"
authors = ["Ivan Reutov <nujievik@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A CLI utility for muxing media (e.g. video, audio, subtitles)."
repository = "https://github.com/nujievik/mux-media"
license = "MIT OR Apache-2.0"
keywords = ["cli", "utility"]
categories = ["command-line-utilities", "multimedia"]

include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[features]
default = []
ffmpeg-static = ["ffmpeg-next/static"]
ffmpeg-build = ["ffmpeg-next/build"]

[dependencies.ffmpeg-next]
version = "8"
default-features = false
features = ["codec", "format"]

[dependencies]
chardet = "0.2"
clap = "4"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
enum-map = "2"
globset = "0.4"
is_default = "0.1.4"
lazy-regex = "3"
log = "0.4"
matroska = "0.30"
rayon = "1"
rsubs-lib = "0.3.3"
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
supports-color = "3"
time = "0.3"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }

[patch.crates-io]
rsubs-lib = { git = "https://github.com/nujievik/rsubs-lib", branch = "mux-media" }

[dev-dependencies]
phf = { version = "0.13", features = ["macros"] }
rand = "0.9"
