[package]
name = "mux-media-macros"
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Helper derive macros for mux-media crate"
repository = "https://github.com/nujievik/mux-media"
homepage = "https://crates.io/crates/mux-media"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
