[package]
name = "mux-media"
license = "GPL-3.0"
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/nujievik/mux-media"
description = "A simple automated solution for muxing media (e.g. video, audio, subtitles)."

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "assets/win32/.gitkeep",
    "assets/win64/.gitkeep",
    "build.rs",
    "src/**",
]

[features]
default = []
with_embedded_bins = []

[dependencies]
mux-media-macros = { path = "../mux-media-macros" }
atty = "0.2"
chardet = "0.2.4"
clap = "4.5"
enum-map = "2.7"
globset = "0.4"
log = "0.4"
matroska = "0.30.0"
once_cell = "1.21.3"
phf = { version = "0.12.1", features = ["macros"] }
rayon = "1.10.0"
regex = "1.11.1"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
supports-color = "3.0.2"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnls"] }

[build-dependencies]
which = "8.0.0"

[dev-dependencies]
rand = "0.9"
